# noupdater

./: Cargo.toml  README.md  app.manifest  build.rs  disable.ps1  enable.ps1
src/: main.rs
