[package]
name = "updatefucker"
version = "0.1.0"
edition = "2024"

[package.metadata.winres]
OriginalFilename = "updatefucker.exe"
FileDescription = "UpdateFucker Application"
ProductName = "UpdateFucker"

[dependencies]
eframe = "0.32.1"
winreg = "0.55"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true