[package]
name = "noupdater"
version = "0.2.0"
edition = "2024"

[package.metadata.winres]
OriginalFilename = "noupdater.exe"
FileDescription = "NoUpdater"
ProductName = "NoUpdater"
FileVersion = "0.2.0"
ProductVersion = "0.2.0"

[dependencies]
eframe = "*"
winreg = "0.55"
ico = "0.4.0"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true